<resources>
    <string name="app_name">AOM Instruments</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">Instrument_Manager</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbInstrument_Manager</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="back">Back</string>
    <string name="add_instrument">Add Instrument</string>
    <string name="categories">Categories</string>
    <string name="category_name">Category Name</string>
    <string name="category_code">Category Code</string>
    <string name="create_category">Create Category</string>
    <string name="create">Create</string>
    <string name="category">Category</string>
    <string name="instrument_location">Instrument Location</string>
    <string name="instrument_code">Instrument Code</string>
    <string name="enter_instrument_code">Enter Instrument Code</string>
    <string name="instrument_status">Instrument Status</string>
    <string name="generate_qr">Generate QR</string>
    <string name="upload_qr">Upload QR</string>
    <string name="qr_code">QR Code</string>
    <string name="instrument">Instrument</string>
    <string name="assign">Assign</string>
    <string name="student">Student</string>
    <string name="select_a_student">Select a student</string>
</resources>