<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateCategoryActivity">

    <include
        android:id="@+id/tool"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/baseline_category_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/category_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_name" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/baseline_numbers_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/category_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_code" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_cat_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/create"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

</LinearLayout>